--- a/src/app/home/unit-list/unit-list.component.scss
+++ b/src/app/home/unit-list/unit-list.component.scss
@@ -159,3 +159,62 @@
         }
     }
 }
+
+// .accom_info_top{
+//     &> div {
+//         display: inline-block;
+//     }
+//     .image_area{
+//         width: 50%;
+//     }
+//     .info_area{
+//         width: 50%;
+//         height: 100%;
+//         position: relative;
+//         padding: 20px 0;
+//         &> div{
+//             width: 100%;
+//             height: 100%;
+//             padding-left: 50px;
+//             h2{
+//                 margin: 0;
+//             }
+//         }
+//     }
+// }
+
+.accom_info_top {
+    & > div {
+        width: 50%;
+    }
+    .info_area {
+        // position: absolute;
+        // right: 0;
+        // bottom: 120px;
+        padding: 20px 0 0 30px;
+        h2 {
+            margin: 0 0 10px 0;
+        }
+    }
+}
+
+.option_condition{
+    span{
+        text-align: end;
+        font-size: 12px !important;
+        width: unset !important;
+        line-height: unset !important;
+        margin-top: 10px;
+        margin-right: 5px;
+        padding: 0 5px;
+        border-radius: 20px;
+
+        &.option_condition_cash{
+            border: 1px solid #6e8;
+        }
+
+        &.option_condition_delivery{
+            border: 1px solid #ff7f50;
+        }
+    }
+}
