--- a/src/app/home/unit-list/unit-list.component.scss
+++ b/src/app/home/unit-list/unit-list.component.scss
@@ -129,6 +129,9 @@
                 }
             }
         }
+        .txt_post {
+            @include textMultiEllipsis(3);
+          }
     }
     .rv_footer {
         padding: 0 20px;
