--- a/src/app/home/accom-list/accom-list.component.scss
+++ b/src/app/home/accom-list/accom-list.component.scss
@@ -17,3 +17,12 @@
         }
     }
 }
+
+.reserv_box {
+    .reserv_item {
+        .reserv_layer.loc,
+        .reserv_layer.number {
+            top: 148px;
+        }
+    }
+}
