--- a/src/assets/layout.scss
+++ b/src/assets/layout.scss
@@ -286,6 +286,12 @@ h2 {
                 font-size: $font_m;
                 cursor: pointer;
             }
+            @include desktop {
+                margin-bottom: 20px;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
         }
         &.reserv_btn {
             min-width: 160px;
