--- a/src/app/shared/mobile/set-guests/set-guests.component.tns.scss
+++ b/src/app/shared/mobile/set-guests/set-guests.component.tns.scss
@@ -1,6 +1,11 @@
 /* Add mobile styles for the component here.  */
+.modal-container{
+}
 .modal_wrapper{
-    padding: 10;
+    padding: 30;
+    margin: 30;
+    background-color: #fff;
+    border-radius: 5;
     .title{
         color: #1b3a57;
         font-size: 20;
@@ -27,4 +32,11 @@
             font-size: 20;
         }
     }
+}
+
+.btn{
+    color: #3955ff;
+    padding: 3 5;
+    border-radius: 3;
+    margin: 5;
 }
