모달에 rootViewController 적용

--- a/src/app/shared/mobile/search-box/search-box.component.tns.html
+++ b/src/app/shared/mobile/search-box/search-box.component.tns.html
@@ -18,3 +18,4 @@
     </StackLayout>
     <Label text="검색" class="btn-search" col="3" (tap)="getSearch()"></Label>
 </GridLayout>
+<NgxDateRange></NgxDateRange>
