--- a/src/app/app.component.tns.scss
+++ b/src/app/app.component.tns.scss
@@ -1,6 +1,9 @@
 @import '~@nativescript/theme/css/core.css';
 @import '~@nativescript/theme/css/default.css';
 
+.btn{
+    border-width: 1;
+}
 .btn-primary{
     background-color: #3955ff;
 }
