--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -1,6 +1,6 @@
 <GridLayout rows="*, auto"> 
     <page-router-outlet actionBarVisibility="never" row="0"></page-router-outlet>
-    <GridLayout height="60" row="1" borderTopWidth="1" borderColor="#eee">
+    <GridLayout height="60" row="1" backgroundColor="#eee">
         <app-footer></app-footer>
     </GridLayout>
 </GridLayout>
