퍼블리싱 반영 	modified:   angular.json 	modified:   src/app/home/accom-list/accom-list.component.html 	modified:   src/app/home/layout/header/header.component.html 	modified:   src/app/home/layout/header/header.component.ts 	modified:   src/app/home/login/login.component.html 	new file:   src/assets/css/common.css 	new file:   src/assets/css/layout2.css 	new file:   src/assets/images/file_btn.png 	new file:   src/assets/images/pa_s_end.png 	new file:   src/assets/images/pa_s_next.png 	new file:   src/assets/images/re.png 	new file:   src/assets/images/thumb/detail_camp01.jpg 	new file:   src/assets/images/thumb/roomInfo.png 	modified:   src/assets/images/visual.png 	modified:   src/styles.scss

--- a/src/app/home/layout/header/header.component.html
+++ b/src/app/home/layout/header/header.component.html
@@ -8,6 +8,7 @@
             <nav class="util">
                 <ul>
                     <li><a href="http://59.15.3.210:8058/#/login" target="_blank">파트너센터</a></li>
+                    <li><a href="http://59.15.3.210:8058/#/login" target="_blank">{{outerWidth}}</a></li>
                     <li *ngIf="!isLoggedIn"><a (click)="goLogin()">LOGIN</a></li>
                     <li *ngIf="isLoggedIn"><a (click)="logout()">MYPAGE</a></li>
                 </ul>
@@ -19,7 +20,7 @@
             <a [ngClass]="['mobile_menu', mobMenuToggle ? 'active' : '']" (click)="mobMenuToggle = !mobMenuToggle">모바일메뉴</a>
             <h1 class="logo"><a href="#"><img src="./assets/images/logo.png" alt="모빌라"></a></h1>
             <nav class="gnb"
-                [ngStyle]="{'display': mobMenuToggle ? 'block' : 'none'}">
+                [ngStyle]="{'display': outerWidth > 1200 ? 'block' : (mobMenuToggle ? 'block' : 'none')}">
                 <ul>
                     <li><a href="#">모빌라캠핑장</a></li>
                     <li><a href="#">모빌라홀캠핑장</a></li>
