--- a/src/app/home/login/join/join.component.html
+++ b/src/app/home/login/join/join.component.html
@@ -1,48 +1,64 @@
-<div class="content-wrapper">
-    <div class="login-container">
-        <h2>Movila 회원가입</h2>
-        <div class="login-content">
-            <form [formGroup]="joinform" class="flex-column">
-                <h4>이름
-                    <span *ngIf="checkValid('MemNm')" class="text-error"> * 필수정보 입니다.</span>
-                </h4>
-                <input type="text" formControlName="MemNm" placeholder="이름" [ngStyle]="{'borderColor': checkValid('MemNm') ? '#f00': '#ddd'}">
-                <h4>아이디
-                    <span *ngIf="checkValid('LoginId')" class="text-error"> * 필수정보 입니다.</span>
-                    <span *ngIf="joinform.controls['LoginId'].valid && isDuplicated" class="text-error"> * 중복된 ID가 존재합니다.</span>
-                </h4>
-                <input type="text" formControlName="LoginId" placeholder="아이디" 
-                    (focus)="isChecked = false"
-                    (focusout)="checkDuplication()"
-                    [ngStyle]="{'borderColor': checkValid('LoginId') || (joinform.controls['LoginId'].valid && !isChecked) ? '#f00': '#ddd'}">
-                <h4>
-                    비밀번호  
-                    <i class="fa fa-info-circle" [matTooltip]="pwdTip"></i>
-                    <span *ngIf="checkValid('Pwd')" class="text-error"> * 8 ~ 16자, 숫자 혹은 특수문자 1개 이상(필수)</span>
-                </h4>
-                <input type="text" formControlName="Pwd" placeholder="패스워드" [ngStyle]="{'borderColor': checkValid('Pwd') ? '#f00': '#ddd'}">
-                <input type="text" formControlName="rePwd" placeholder="패스워드 확인" [ngStyle]="{'borderColor': joinform.controls.rePwd.touched && checkPwd() ? '#f00': '#ddd'}">
-                <h4>휴대전화
-                    <span *ngIf="checkValid('Mobile')" class="text-error"> * 필수정보 입니다.</span>
-                </h4>
-                <div class="input-with-btn">
-                    <input type="text" formControlName="Mobile" placeholder="- 없이 번호만 입력" [ngStyle]="{'borderColor': checkValid('Mobile') ? '#f00': '#ddd'}">
-                    <button>인증번호 받기</button>
-                    <input type="text" placeholder="인증번호 입력" formControlName="sms">
-                    <button>인증번호 확인</button>
-                </div>
-                <h4>
-                    채널코드
-                    <i class="fa fa-info-circle" [matTooltip]="chanelTip"></i>
-                </h4>
-                <input type="text" formControlName="ChCode" placeholder="채널코드">
-                <h4>개인정보 수집 및 이용 동의
-                    <span *ngIf="checkValid('agreement')" class="text-error"> * 필수</span>
-                    <a>보기</a>
-                </h4>
-                <mat-checkbox color="primary" formControlName="agreement" [ngStyle]="{'color': checkValid('agreement') ? '#f00': '#000'}">동의합니다.</mat-checkbox>
-                <button class="join-submit" (click)="sumbit()">가입</button>
-            </form>
+<div id="main">
+    <div class="sub_title text-center">
+        <div class="content">
+            <h2>
+                회원가입
+                <p>02. 정보 입력</p>
+            </h2>
         </div>
     </div>
+    <form [formGroup]="joinform">
+        <article class="joinWrap mgb120">
+            <section class="content input_wrap">
+                <h3>로그인 정보</h3>
+                <div>
+                    <label for="">아이디</label>
+                    <span *ngIf="checkValid('LoginId')" class="text-error"> * 필수정보 입니다.</span>
+                    <span *ngIf="joinform.controls['LoginId'].valid && isDuplicated" class="text-error"> * 중복된 ID가 존재합니다.</span>
+                    <input  type="text" formControlName="LoginId" placeholder="아이디" 
+                        (focus)="isChecked = false"
+                        (focusout)="checkDuplication()"
+                        [ngStyle]="{'borderColor': checkValid('LoginId') || (joinform.controls['LoginId'].valid && !isChecked) ? '#f00': '#ddd'}">
+                </div>
+                <div>
+                    <label for="">비밀번호</label>
+                    <i class="fa fa-info-circle" [matTooltip]="pwdTip"></i>
+                    <span *ngIf="checkValid('Pwd')" class="text-error"> * 8 ~ 16자, 숫자 혹은 특수문자 1개 이상(필수)</span>
+                    <input type="password" formControlName="Pwd" placeholder="패스워드" [ngStyle]="{'borderColor': checkValid('Pwd') ? '#f00': '#ddd'}">
+                    <input type="password" formControlName="rePwd" placeholder="패스워드 확인" [ngStyle]="{'borderColor': joinform.controls.rePwd.touched && checkPwd() ? '#f00': '#ddd'}">
+                </div>
+                <div>
+                    <label for="">사용자명</label>
+                    <span *ngIf="checkValid('MemNm')" class="text-error"> * 필수정보 입니다.</span>
+                    <input type="text" formControlName="MemNm" placeholder="이름" [ngStyle]="{'borderColor': checkValid('MemNm') ? '#f00': '#ddd'}">
+                </div>
+                <div>
+                    <label for="">휴대폰 번호</label>
+                    <span *ngIf="checkValid('Mobile')" class="text-error"> * 필수정보 입니다.</span>
+                    <div class="input-with-btn">
+                        <input type="text" formControlName="Mobile" placeholder="- 없이 번호만 입력" [ngStyle]="{'borderColor': checkValid('Mobile') ? '#f00': '#ddd'}">
+                        <button>인증번호 받기</button>
+                        <input type="text" placeholder="인증번호 입력" formControlName="sms">
+                        <button>인증번호 확인</button>
+                    </div>
+                </div>
+                <div>
+                    <label for="">협약사코드</label>
+                    <input type="text" formControlName="ChCode" placeholder="협약사코드">
+                </div>
+                <div>
+                    <h4>개인정보 수집 및 이용 동의
+                        <span *ngIf="checkValid('agreement')" class="text-error"> * 필수</span>
+                        <a>보기</a>
+                    </h4>
+                    <mat-checkbox color="primary" formControlName="agreement" [ngStyle]="{'color': checkValid('agreement') ? '#f00': '#000'}">동의합니다.</mat-checkbox>
+                    <button class="join-submit" (click)="sumbit()">가입</button>
+                </div>
+            </section>
+            <div class="content btn_wrap mgt50 text-center">
+                <button class="cancel_btn">취소</button>
+                <button class="primary_btn">가입신청</button>
+            </div>
+        </article>
+    </form>
 </div>
