--- a/src/app/home/login/login.component.scss
+++ b/src/app/home/login/login.component.scss
@@ -1,6 +1,8 @@
 @import '/src/assets/var';
 
 /** 로그인 **/
+
+h2 { margin: 80px 0 20px 0; font-size: 32px; font-weight: 700; }
 .sec_login .sub_tab ul li { width: 50%; }
 
 .loginWrap {
@@ -8,6 +10,7 @@
     max-width: 600px;
     margin: 0 auto 150px auto;
     .input_wrap {
+        width: 100%;
         max-width: 420px;
         margin: 50px auto;
         & > div {
