--- a/src/assets/css/layout2.css
+++ b/src/assets/css/layout2.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-#main { margin-top: 230px; }
+/* #main { margin-top: 230px; }
 
 .content { position: relative; width: 95%; max-width: 1200px; margin: 0 auto; }
 
@@ -29,16 +29,16 @@ button + button { margin-left: 10px; }
 
 .cancel_btn { border: 1px solid transparent; background: transparent; }
 
-.btn-lg { min-width: 140px; height: 60px; font-size: 16px; }
+.btn-lg { min-width: 140px; height: 60px; font-size: 16px; } */
 
 /** 버튼 **/
-.content.btn_wrap { max-width: 420px; font-size: 15px; }
+/* .content.btn_wrap { max-width: 420px; font-size: 15px; }
 
-.content.btn_wrap button { width: 140px; height: 60px; font-size: 16px; }
+.content.btn_wrap button { width: 140px; height: 60px; font-size: 16px; } */
 
 /*** 마이페이지 ***/
 /** mp_snb **/
-.mp_snb { height: 50px; border-bottom: 1px solid #ececec; background: #fcfcfc; line-height: 50px; display: block; clear: both; content: ''; }
+/* .mp_snb { height: 50px; border-bottom: 1px solid #ececec; background: #fcfcfc; line-height: 50px; display: block; clear: both; content: ''; }
 
 .mp_snb .mp_title { float: left; color: #aaa; background: transparent; font-size: 13px; font-weight: 300; line-height: 50px; cursor: pointer; }
 
@@ -51,23 +51,23 @@ button + button { margin-left: 10px; }
 .mp_snb ul li a.focus { color: #93b85f; font-weight: 500; }
 
 @media (max-width: 1200px) { .mp_snb ul { display: none; }
-  .mp_snb .mp_title:after { transform: rotate(90deg); } }
+  .mp_snb .mp_title:after { transform: rotate(90deg); } } */
 
 /** 탭 **/
-.sub_tab { height: 60px; border-bottom: 1px solid #ddd; }
+/* .sub_tab { height: 60px; border-bottom: 1px solid #ddd; } */
 
-.sub_tab ul li { min-width: 120px; line-height: 60px; text-align: center; }
+/* .sub_tab ul li { min-width: 120px; line-height: 60px; text-align: center; }
 
 .sub_tab ul li a { display: block; width: 100%; height: 100%; }
 
-.sub_tab ul li.focus { font-weight: 500; }
+.sub_tab ul li.focus { font-weight: 500; } */
 
-.sub_tab ul li.focus:after { display: block; position: relative; top: -1px; border-bottom: 2px solid #333; content: ''; }
+/* .sub_tab ul li.focus:after { display: block; position: relative; top: -1px; border-bottom: 2px solid #333; content: ''; } */
 
-@media (max-width: 800px) { .sub_tab ul li { min-width: 80px; } }
+/* @media (max-width: 800px) { .sub_tab ul li { min-width: 80px; } } */
 
 /** 인풋 박스 **/
-.input_wrap > div { margin-bottom: 20px; }
+/* .input_wrap > div { margin-bottom: 20px; }
 
 .input_wrap > div > label { display: block; margin-bottom: 5px; color: #666; font-size: 15px; }
 
@@ -91,21 +91,21 @@ button + button { margin-left: 10px; }
 
 .input_wrap > div.email_box .email_hst { width: 160px; }
 
-.input_wrap > div.email_box span { margin: 0 5px; line-height: 50px; }
+.input_wrap > div.email_box span { margin: 0 5px; line-height: 50px; } */
 
 /** 서브 타이틀 **/
-h2 { margin: 80px 0 20px 0; font-size: 32px; font-weight: 700; }
+/* h2 { margin: 80px 0 20px 0; font-size: 32px; font-weight: 700; } */
 
-h2 p { font-size: 15px; color: #aaa; font-weight: 400; }
+/* h2 p { font-size: 15px; color: #aaa; font-weight: 400; }
 
 .sub_title .page_desc { font-size: 15px; color: #aaa; font-weight: 400; margin-bottom: 20px; padding: 20px; border: 1px solid #eee; }
 
 .sub_title .page_desc .title { display: block; margin-bottom: 10px; color: #666; font-size: 15px; font-weight: 500; }
 
-.sub_title .page_desc span { color: #aaa; font-size: 14px; }
+.sub_title .page_desc span { color: #aaa; font-size: 14px; } */
 
 /** 서브 비주얼 **/
-#sub_visual .content { height: 400px; }
+/* #sub_visual .content { height: 400px; }
 
 #sub_visual .content .black_bg { position: relative; width: 100%; height: 100%; background-color: rgba(51, 51, 51, 0.5); }
 
@@ -115,10 +115,10 @@ h2 p { font-size: 15px; color: #aaa; font-weight: 400; }
 
 #sub_visual .content .black_bg .sub_title p { color: #ddd; }
 
-@media (max-width: 800px) { #sub_visual .content .black_bg .sub_title { left: 30px; } }
+@media (max-width: 800px) { #sub_visual .content .black_bg .sub_title { left: 30px; } } */
 
 /** 예약박스 **/
-.reserv_box { height: 150px; background: #fff; }
+/* .reserv_box { height: 150px; background: #fff; }
 
 .reserv_box .reserv_item { position: relative; vertical-align: middle; padding: 20px 30px; border: 1px solid #eee; border-right: 0; z-index: 1; }
 
@@ -160,19 +160,19 @@ h2 p { font-size: 15px; color: #aaa; font-weight: 400; }
 
 .reserv_box .reserv_item .reserv_layer.number { left: -1px; width: 220px; padding: 30px; }
 
-.reserv_box .reserv_item .reserv_layer.number dt { color: #666; font-size: 15px; }
+.reserv_box .reserv_item .reserv_layer.number dt { color: #666; font-size: 15px; } */
 
 /* 카운트 박스 */
-.countNum_box button { width: 40px; height: 40px; margin: 0 !important; border: 1px solid #ddd; vertical-align: middle; }
+/* .countNum_box button { width: 40px; height: 40px; margin: 0 !important; border: 1px solid #ddd; vertical-align: middle; }
 
 .countNum_box button.minus_btn { background: url("../images/minus.png") 50% 50% no-repeat; }
 
 .countNum_box button.plus_btn { background: url("../images/plus.png") 50% 50% no-repeat; }
 
-.countNum_box .count_inp { width: 50px; height: 40px; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; text-align: center; font-size: 15px; }
+.countNum_box .count_inp { width: 50px; height: 40px; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; text-align: center; font-size: 15px; } */
 
 /** 추천 상품 **/
-.recomm_box ul li { position: relative; width: 32%; height: 300px; margin-bottom: 20px; margin-right: 2%; }
+/* .recomm_box ul li { position: relative; width: 32%; height: 300px; margin-bottom: 20px; margin-right: 2%; }
 
 .recomm_box ul li:nth-child(3n) { margin-right: 0; }
 
@@ -186,10 +186,10 @@ h2 p { font-size: 15px; color: #aaa; font-weight: 400; }
 
 .recomm_box ul li .recomm_item_img .recomm_item_desc dd.price { margin-top: 20px; font-weight: 500; }
 
-.recomm_box ul li .recomm_item_img .recomm_item_desc dd.price .sale_tag { display: inline-block; margin-right: 5px; color: #93b85f; }
+.recomm_box ul li .recomm_item_img .recomm_item_desc dd.price .sale_tag { display: inline-block; margin-right: 5px; color: #93b85f; } */
 
 /** 게시판 **/
-.title_desc { margin-bottom: 10px; }
+/* .title_desc { margin-bottom: 10px; }
 
 .nm_bd_list .desc { display: inline-block; max-width: 500px; height: 36px; color: #aaa; font-size: 14px; line-height: 36px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
 
@@ -213,10 +213,10 @@ h2 p { font-size: 15px; color: #aaa; font-weight: 400; }
 
 .nm_bd_list table tr.reply td.title a:before { display: inline-block; position: relative; top: -2px; margin: 0 8px; content: ''; width: 8px; height: 8px; background: url("../images/re.png") 50% 50% no-repeat; content: ''; }
 
-.nm_bd_list button { min-width: 80px; height: 36px; font-size: 14px; }
+.nm_bd_list button { min-width: 80px; height: 36px; font-size: 14px; } */
 
 /** 상품 리스트 **/
-.nm_list { border-top: 1px solid #333; }
+/* .nm_list { border-top: 1px solid #333; }
 
 .nm_list li.list_head { padding: 10px 0; border: 1px solid #eee; background: #fbfbfb; color: #666; font-size: 15px; }
 
@@ -282,10 +282,10 @@ h2 p { font-size: 15px; color: #aaa; font-weight: 400; }
 
 .option_item select { width: 130px; min-width: 80px; height: 40px; padding: 3px 8px; background: #fff; color: #666; border: 1px solid #ddd; }
 
-.option_item .del_btn { position: absolute; top: 15px; left: -20px; width: 13px; height: 13px; background: url("../images/del_btn.png") 50% 50% no-repeat; content: ''; }
+.option_item .del_btn { position: absolute; top: 15px; left: -20px; width: 13px; height: 13px; background: url("../images/del_btn.png") 50% 50% no-repeat; content: ''; } */
 
 /** pagination **/
-.pagination { margin: 30px 0; text-align: center; }
+/* .pagination { margin: 30px 0; text-align: center; }
 
 .pagination a, .pagination strong { display: inline-block; margin: 0 8px; color: #333; font-size: 20px; font-weight: 400; }
 
@@ -301,26 +301,30 @@ h2 p { font-size: 15px; color: #aaa; font-weight: 400; }
 
 .pagination a.next { width: 13px; height: 13px; background: url("../images/pa_next.png") 50% 50% no-repeat; content: ''; }
 
-.pagination a.next_end { width: 13px; height: 13px; background: url("../images/pa_end.png") 50% 50% no-repeat; content: ''; }
+.pagination a.next_end { width: 13px; height: 13px; background: url("../images/pa_end.png") 50% 50% no-repeat; content: ''; } */
 
-@media (max-width: 800px) { .pagination { /* pagenation(small) */ }
-  .pagination a, .pagination strong { color: #aaa; font-size: 14px; }
+/* @media (max-width: 800px) { .pagination {  */
+  /* pagenation(small) */
+ /* } */
+  /* .pagination a, .pagination strong { color: #aaa; font-size: 14px; }
   .pagination a.pre { width: 13px; height: 13px; background: url("../images/pa_s_next.png") 50% 50% no-repeat; content: ''; transform: rotate(180deg); }
   .pagination a.pre_end { width: 13px; height: 13px; background: url("../images/pa_s_end.png") 50% 50% no-repeat; content: ''; transform: rotate(180deg); }
   .pagination a.next { width: 13px; height: 13px; background: url("../images/pa_s_next.png") 50% 50% no-repeat; content: ''; }
-  .pagination a.next_end { width: 13px; height: 13px; background: url("../images/pa_s_end.png") 50% 50% no-repeat; content: ''; } }
+  .pagination a.next_end { width: 13px; height: 13px; background: url("../images/pa_s_end.png") 50% 50% no-repeat; content: ''; } } */
 
-@media (max-width: 1200px) { /** 예약박스 **/
-  .reserv_box { height: auto; }
+/* @media (max-width: 1200px) {  */
+  /** 예약박스 **/
+  /* .reserv_box { height: auto; }
   .reserv_box .reserv_item.date dl { display: block; }
-  .reserv_box .reserv_item.date dl:first-child { margin-bottom: 20px; } }
+  .reserv_box .reserv_item.date dl:first-child { margin-bottom: 20px; } } */
 
-@media (max-width: 800px) { /** 예약박스 **/
-  .reserv_box .reserv_item { border: 0; }
-  .reserv_box .reserv_item:not(:last-child) { border-bottom: 1px solid #eee; }
+/* @media (max-width: 800px) {  */
+  /** 예약박스 **/
+  /* .reserv_box .reserv_item { border: 0; }
+  .reserv_box .reserv_item:not(:last-child) { border-bottom: 1px solid #eee; } */
   /** 추천 상품 **/
-  .recomm_box ul li { width: 100%; margin-right: 0; }
+  /* .recomm_box ul li { width: 100%; margin-right: 0; } */
   /** 인풋 박스 **/
-  .input_wrap .email_box select.email_hst { display: block; width: 100%; }
+  /* .input_wrap .email_box select.email_hst { display: block; width: 100%; } */
   /** 게시판 **/
-  .nm_bd_list table th:not(.title), .nm_bd_list table td:not(.title) { display: none; } }
+  /* .nm_bd_list table th:not(.title), .nm_bd_list table td:not(.title) { display: none; } } */
