--- a/src/assets/layout.scss
+++ b/src/assets/layout.scss
@@ -116,18 +116,21 @@ button + button {
         a {
             display: block;
             width: 100%;
-            height: 100%;
-        }
-        &.focus {
-            font-weight: 500;
-            &:after {
-                display: block;
-                position: relative;
-                top: -1px;
-                border-bottom: 2px solid #333;
-                content: '';
+            height: 60px;
+            &.focus {
+                font-weight: 500;
+                &:after {
+                    position: relative;
+                    top: -2px;
+                    display: block;
+                    width: 100%;
+                    height: 2px;
+                    background: $black;
+                    content: '';
+                }
             }
         }
+        
         @include tablet {
             min-width: 80px;
         }
