--- a/src/app/home/accom-list/accom-list.component.tns.scss
+++ b/src/app/home/accom-list/accom-list.component.tns.scss
@@ -5,7 +5,6 @@
 
 .content{
     width: 100%;
-    height: 0;
     .card-img{ 
         border-radius: 3;
         
@@ -14,9 +13,11 @@
 }
 
 .accom-info{
-    .accom-area{ color: #666;}
+    .accom-area{ color: #666; }
     .item-name{font-size: 18; color: #333;}
     .item-org-price{text-decoration: line-through;}
     .item-price{color: #333;}
     .sale-rate{color: #93b85f; margin-left: 10;}
 }
+
+.accom_sido{text-align: center;}
